@@ -147,15 +147,17 @@ class SetupTest(unittest.TestCase):
     @util.only_unix
     @using_curl_config('curl-config-ssl-feature-only')
     def test_ssl_feature_only(self):
+        saved_stderr = sys.stderr
+        sys.stderr = captured_stderr = StringIO()
         try:
-            pycurl_setup.ExtensionConfiguration()
-        except pycurl_setup.ConfigurationError as e:
-            self.assertEqual('''\
-Curl is configured to use SSL, but we have not been able to determine \
-which SSL backend it is using. Please see PycURL documentation for how to \
-specify the SSL backend manually.''', str(e))
-        else:
-            self.fail('Should have raised')
+            config = pycurl_setup.ExtensionConfiguration()
+        finally:
+            sys.stderr = saved_stderr
+        # ssl define should be on
+        assert 'HAVE_CURL_SSL' in config.define_symbols
+        # and a warning message
+        assert 'Warning: libcurl is configured to use SSL, but we have \
+not been able to determine which SSL backend it is using.' in captured_stderr.getvalue()
 
     @util.only_unix
     @using_curl_config('curl-config-ssl-feature-only')
